@@ -26,7 +26,6 @@ package com.vectorcast.plugins.vectorcastexecution;
 import com.vectorcast.plugins.vectorcastexecution.job.InvalidProjectFileException;
 import com.vectorcast.plugins.vectorcastexecution.job.JobAlreadyExistsException;
 import com.vectorcast.plugins.vectorcastexecution.job.NewMultiJobUpdate;
-
 import hudson.Extension;
 import hudson.model.Descriptor;
 import hudson.model.FreeStyleProject;
