@@ -33,7 +33,7 @@ VCJob.Control.Submit           = Create
 
 VCJob.Control.SCMCheckoutLine          = SCM
 VCJob.Control.SCMCheckoutLine.snippet.title = SCM Checkout Snippet
-VCJob.Control.SCMCheckoutLine.snippet.description = Pipeline Snippet from Jenkins Snippet Generator for your SCM checkout of the VectorCAST/Manage project and related files
+VCJob.Control.SCMCheckoutLine.snippet.description = Pipeline Snippet from Jenkins <a href="/pipeline-syntax" target="_blank"> Snippet Generator </a> for your SCM checkout of the VectorCAST/Manage project and related files
 
 
 VCJob.Scripts = Environment Scripts
