@@ -24,12 +24,7 @@ THE SOFTWARE.
 -->
 <div>
     Command to prefix to the call to VectorCAST/Manage.
-    <br/>For Windows example
+    <br/>e.g.
     <pre>
-    c:\wrs\wrenv.bat
-    </pre>
-    <br/>For Unix/Linux example
-    <pre>
-    c:\wrs\wrenv.bat
-    </pre>
+    c:\wrs\wrenv.bat</pre>
 </div>
