@@ -24,14 +24,8 @@ THE SOFTWARE.
 -->
 <div>
     These commands will be executed before VectorCAST/Manage is run. They might define environment variables or call batch files to setup the environment.
-    <br/>For Windows example
+    <br/>For example
     <pre>
     call "%VS100COMNTOOLS%\vcvars32.bat"
-    set PATH=%PATH%;x:\tools\bin
-    </pre>
-    <br/>For Linux/Unix example
-    <pre>
-    source /build/setup.sh
-    set PATH=$PATH%:/opt/tools/bin
-    </pre>
+    set PATH=%PATH%;x:\tools\bin</pre>
 </div>
